# Ram-Cehta

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SETUP.md  docker-compose.yml
backend/: .env.example  CLAUDE.md  Dockerfile  Makefile  fly.toml  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_user_roles_and_auth_hook.py  0003_dashboard_indexes.py  0004_v2_indexes.py  0005_integrations.py  0006_trabajadores.py  0007_ai_qa.py  0008_legal_vault.py  0009_proyectos.py  0010_calendar.py  0011_fondos.py  0012_notifications_inbox.py  0013_audit_action_log.py  0014_perf_indices.py  0015_saved_views.py  0016_currency_rates.py  0017_webhooks.py  0018_two_factor.py  0019_legal_versions.py  0020_api_tokens.py  0021_user_preferences.py  0022_entregables_regulatorios.py  0023_entregables_extendidos.py  0024_saved_views_entregables.py  0025_ai_insights.py  0026_hito_encargado.py  0027_informes_lp.py  0028_informes_lp_notifications.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  logging.py  observability.py  rbac.py  security.py
backend/app/models/: __init__.py  ai_conversation.py  ai_document.py  ai_message.py  audit_log.py  calendar_event.py  currency_rate.py  empresa.py  entregable.py  etl_run.py  fondo.py  informe_lp.py  integration.py  legal_document.py  legal_document_version.py  lp.py  movimiento.py  notification.py  orden_compra.py  proveedor.py  proyecto.py  rejected_row.py  saved_view.py  suscripcion_accion.py  trabajador.py  two_factor.py  user_preference.py  user_role.py
backend/app/schemas/: admin_user.py  ai.py  api_token.py  audit.py  audit_log.py  avance.py  bulk.py  bulk_import.py  calendar.py  catalogo.py  common.py  currency.py  dashboard.py  digest.py  document_extraction.py  empresa.py  empresa_dashboard.py  entregable.py  f29.py  fondo.py  informe_lp.py  legal.py  legal_version.py  movimiento.py  notification.py  orden_compra.py  portfolio.py  proveedor.py  saved_view.py  search.py  status.py  suscripcion.py  trabajador.py  two_factor.py  user_preference.py  webhook.py
backend/app/services/: ai_chat_service.py  ai_embedding_service.py  ai_indexing_service.py  ai_tools_service.py  api_token_service.py  audit_service.py  authorization_service.py  bulk_import_service.py  calendar_agents_service.py  currency_service.py  digest_service.py  document_analyzer_service.py  email_service.py  (+14 more)
backend/db/: schema.sql
backend/scripts/: etl_cron.py  inspect_excel.py  test_parse_excel.py
backend/tests/: conftest.py
(+512 files in other folders)
