[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cehta-backend"
version = "0.1.0"
description = "Backend FastAPI para Plataforma Cehta Capital"
requires-python = ">=3.12"
readme = "../README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<0.137",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "argon2-cffi>=23.1,<24.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "slowapi>=0.1.9,<0.2",
    "httpx>=0.28,<0.29",
    "structlog>=24.4,<25.0",
    "python-multipart>=0.0.20",
    "supabase>=2.10,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7.0",
    "httpx>=0.28,<0.29",
    "testcontainers[postgres]>=4.8,<5.0",
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2.0",
    "types-python-jose>=3.3,<4.0",
    "bandit>=1.8,<2.0",
    "pip-audit>=2.7,<3.0",
]
pdf = [
    "docxtpl>=0.19,<0.20",
    "jinja2>=3.1,<4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "S",             # bandit
    "N",             # pep8-naming
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "S101",  # assert ok in tests
    "B008",  # FastAPI Depends() in defaults is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"alembic/env.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests que requieren Postgres real (testcontainers)",
    "slow: tests lentos (>1s)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
